# uts-mla-nba

./: README.md
uts-mla-nba/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
uts-mla-nba/docs/: Makefile  conf.py  index.rst  make.bat
uts-mla-nba/models/: log_xgb_ada_trained_ada_v2.joblib  log_xgb_ada_trained_ada_v3.joblib  log_xgb_ada_trained_ada_v3_1.joblib  log_xgb_ada_trained_log_v2.joblib  log_xgb_ada_trained_log_v3.joblib  log_xgb_ada_trained_log_v3_1.joblib  log_xgb_ada_trained_xgb_v2.joblib  log_xgb_ada_trained_xgb_v3.joblib  log_xgb_ada_trained_xgb_v3_1.joblib  xgboost_v2.joblib  xgboost_v3.joblib  xgboost_v3_2.joblib
uts-mla-nba/notebooks/: kotak_sahil-24707592-week1_logistic_regression_model_1.ipynb  kotak_sahil-24707592-week1_logistic_regression_model_2.ipynb  kotak_sahil-24707592-week1_random_forest.ipynb  kotak_sahil-24707592-week1_xgboost.ipynb  kotak_sahil-24707592-week2_ensemble_model_1.ipynb  kotak_sahil-24707592-week2_ensemble_model_2.ipynb  kotak_sahil-24707592-week2_logistic_regression_model_1.ipynb  kotak_sahil-24707592-week2_svm_model_1.ipynb  kotak_sahil-24707592-week2_xgboost_model_1.ipynb  kotak_sahil-24707592-week3_ensemble_model_1.ipynb  kotak_sahil-24707592-week3_ensemble_model_2.ipynb  kotak_sahil-24707592-week3_ensemble_model_3.ipynb  kotak_sahil-24707592-week3_ensemble_model_4.ipynb  kotak_sahil-24707592-week3_ensemble_model_5-Copy1.ipynb  kotak_sahil-24707592-week3_ensemble_model_5.ipynb  kotak_sahil-24707592-week3_ensemble_model_6.ipynb  kotak_sahil-24707592-week3_ensemble_model_7.ipynb  predictions.csv  (+26 more)
(+50 files in other folders)
